# EnergyLogger4000-Reader

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: codeql-analysis.yml  release.yml  test.yml
src/: main.rs
tests/: binary_integration_test.rs
